--- a/RobotStudioEngine/RobotStudioEngine.csproj
+++ b/RobotStudioEngine/RobotStudioEngine.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1452EB8B-5807-4F71-8E19-B32B6F3D00B7}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>RobotStudioEngine</RootNamespace>
     <AssemblyName>RobotStudioEngine</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
@@ -34,6 +34,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>SDF Applications.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ABB.Robotics.Controllers.PC">
@@ -68,6 +71,9 @@
     </Reference>
     <Reference Include="RobotStudio.Services.RobApi.Desktop">
       <HintPath>Libraries\RobotStudio.Services.RobApi.Desktop.dll</HintPath>
+    </Reference>
+    <Reference Include="RobotStudio.UI.Controller">
+      <HintPath>Libraries\RobotStudio.UI.Controller.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
